--- a/circle.yml
+++ b/circle.yml
@@ -2,48 +2,31 @@ machine:
   services:
   - docker
   environment:
+    RELEASE_SERIES_LIST: 0.10
+    LATEST_STABLE: 0.10
     IMAGE_NAME: kafka
+    CHART_NAME:
+    CHART_REPO:
     DOCKER_PROJECT: bitnami
+    QUAY_PROJECT: bitnami
     GCLOUD_PROJECT: bitnami-containers
 
 dependencies:
   override:
   - docker info
   - gcloud version
-  - docker pull $DOCKER_PROJECT/$IMAGE_NAME:_ || true
+  - curl -sL https://raw.githubusercontent.com/bitnami/test-infra/master/circle/docker-pull-cache.sh | bash -
 
 test:
   override:
-  - docker build --rm=false -t $DOCKER_PROJECT/$IMAGE_NAME:$CIRCLE_BUILD_NUM .
+  - curl -sL https://raw.githubusercontent.com/bitnami/test-infra/master/circle/docker-image-test.sh | bash -
 
 deployment:
-  cache:
+  development:
     branch: master
     commands:
-    - >
-      if [ -n "$DOCKER_PASS" ]; then
-        docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-        docker build --rm=false -t $DOCKER_PROJECT/$IMAGE_NAME:_ .
-        docker push $DOCKER_PROJECT/$IMAGE_NAME:_
-      fi
+    - curl -sL https://raw.githubusercontent.com/bitnami/test-infra/master/circle/docker-development-image.sh | bash -
   release:
     tag: /^[0-9].*-r[0-9]+$/
     commands:
-    - >
-      if [ -n "$DOCKER_PASS" ]; then
-        docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-        docker build --rm=false -t $DOCKER_PROJECT/$IMAGE_NAME:$CIRCLE_TAG .
-        docker tag $DOCKER_PROJECT/$IMAGE_NAME:$CIRCLE_TAG $DOCKER_PROJECT/$IMAGE_NAME:latest
-        docker push $DOCKER_PROJECT/$IMAGE_NAME:$CIRCLE_TAG
-        docker push $DOCKER_PROJECT/$IMAGE_NAME:latest
-      fi
-    - >
-      if [ -n "$GCLOUD_SERVICE_KEY" ]; then
-        echo $GCLOUD_SERVICE_KEY | base64 --decode > ${HOME}/gcloud-service-key.json
-        gcloud auth activate-service-account --key-file ${HOME}/gcloud-service-key.json
-        echo 'ENV BITNAMI_CONTAINER_ORIGIN=GCR' >> Dockerfile
-        docker build --rm=false -t gcr.io/$GCLOUD_PROJECT/$IMAGE_NAME:$CIRCLE_TAG .
-        docker tag gcr.io/$GCLOUD_PROJECT/$IMAGE_NAME:$CIRCLE_TAG gcr.io/$GCLOUD_PROJECT/$IMAGE_NAME:latest
-        gcloud docker -- push gcr.io/$GCLOUD_PROJECT/$IMAGE_NAME:$CIRCLE_TAG
-        gcloud docker -- push gcr.io/$GCLOUD_PROJECT/$IMAGE_NAME:latest
-      fi
+    - curl -sL https://raw.githubusercontent.com/bitnami/test-infra/master/circle/docker-release-image.sh | bash -
